-bugfix Docente participa de evento

--- a/aplicacao/contest/src/main/resources/static/css/style.css
+++ b/aplicacao/contest/src/main/resources/static/css/style.css
@@ -16,6 +16,11 @@ h1, h2, h3 {
   margin-right: 20px;
 }
 
+.scrollable{
+	height:170px;;
+	overflow:scroll;
+}
+
 .opcoes a{
   margin-right: 20px;
 }
