--- a/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/evento/admin_lista_ativos.html
@@ -35,8 +35,8 @@
         
         
 
-        <div class="col m4 s12" th:case="${false}">
-          <p>Não há eventos ativos</p>
+        <div class="col m4 s12" th:if="${false}">
+          <p>Não há eventos Ativos</p>
         </div>
         
         <div class="center">
