--- a/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_eventos_listar_ativos.html
@@ -84,7 +84,11 @@
               	  
                 </div>
               </div>
-        	
+        		
+        	<div class="col m4 s12" th:if="${!existeEventos}">
+              <p>Não há eventos Ativos</p>
+            </div>
+        		
         	</div>
         
         
