--- a/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
@@ -25,21 +25,21 @@
         <div>
           <div class="col s12">
             <div class="col s4" th:each="trabalho : ${trabalhos}">
-            <div class="card horizontal small">
-              <div class="card-stacked">
-                <div>
-                	<div class="card-content">
-                		<span class="card-title" th:text="${trabalho.titulo}"></span>
-                  		<p th:text="'Autor: ' + ${trabalho.participacoes[0].pessoa.nome}"></p>
-                  		<p>Orientador: Thiago Nogueira</p>
-                  		<p th:each="revisao : ${trabalho.revisoes}" th:text="${revisao.revisor.nome}"></p>
-                   	</div>
-                   	<div class="card-action">
-              			<a href="#modalRevisor" class="btn white-text waves-effect waves-light blue-grey modal-trigger">Revisor Alocado</a>
-              		</div>
-                </div>
-              </div>
-            </div>
+	            <div class="card horizontal small">
+	              <div class="card-stacked">
+	                <div>
+	                	<div class="card-content">
+	                		<span class="card-title" th:text="${trabalho.titulo}"></span>
+	                  		<p th:text="'Autor: ' + ${trabalho.participacoes[0].pessoa.nome}"></p>
+	                  		<p>Orientador: Thiago Nogueira</p>
+	                  		<p th:each="revisao : ${trabalho.revisoes}" th:text="${revisao.revisor.nome}"></p>
+	                   	</div>
+	                   	<div class="card-action">
+	              			<a th:id="${trabalho.id}" href="#modalRevisor" onclick="trabalho_atual(this)" class="btn white-text waves-effect waves-light blue-grey modal-trigger">Atribuir Revisor</a>
+	              		</div>
+	                </div>
+	              </div>
+	            </div>
           </div>
           </div>
         </div>
@@ -167,10 +167,15 @@
         
         $( "#listaRevisores" ).scroll(function(){});
         
+        trabalho_atual = function(e){
+        	$('.collection-item').attr('trabalho',e.id);
+        };
+        
         add = function(e) {//vai receber o Objeto vindo da linkRevisor
             var elemento = document.getElementById(e.id);
             var listaescolhidos = document.getElementById("listaEscolhidos");
             var cont = 0;
+            var trabalhoId = $(e).attr('trabalho');
             
             if ($('#listaEscolhidos').find('#'+e.id).length>0){
                 cont++;
@@ -187,7 +192,7 @@
               var token = $("meta[name='_csrf']").attr("content");
               var data = {
 			      		  	'revidorId':idPessoa,
-			    		  	'trabalhoId': 2,
+			    		  	'trabalhoId': trabalhoId,
 			    		  };
               $.ajax({
             	  contentType: 'application/json;charset=UTF-8',
