--- a/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
+++ b/aplicacao/contest/src/main/resources/templates/organizador/org_atribuir_revisores.html
@@ -43,7 +43,7 @@
 	            
 	            
 	      <form action="#" th:action="@{/eventoOrganizador/evento/1/revisores}" method="post">
-	      	<div th:attr="id='modalRevisor' + ${count.index}" class="modal">
+	      	<div th:attr="id='modalRevisor' + ${count.index}" class="modal" data-keyboard="">
 	      		<div class="modal-content">
 	      			<h4 class="block">Nome do Trabalho</h4>
 	      			<div class="row">
@@ -53,7 +53,7 @@
 	      					<input id="nome_do_revisor" type="text" />
 	                		<label for="nome_do_revisor">Nome do Revisor</label>
 	                		<div id="listaRevisores" class="collection">
-	                			<a th:each="revisor : ${revisores}" th:id="${revisor.id}" onclick="add(this)" class="collection-item" th:text="${revisor.nome}"> 
+	                			<a th:each="revisor : ${revisores}" th:id="${revisor.id}" th:onclick="'add(this,\'modalRevisor'+${count.index}+'\');'" class="collection-item" th:text="${revisor.nome}"> 
 	                				<span data-position="bottom" data-delay="50" data-tooltip="Trabalhos Atribuidos a Esteve Revisor" class="title badge tooltipped">1</span>
 	                			</a>
 	                		</div>
@@ -61,7 +61,7 @@
 	      				<div class="col m6 s6">
                 			<h5 id="listaEscolhidosTitulo">Revisores Selecionados</h5>
                 			<div id="listaEscolhidos" class="collection" >
-                			    <a th:each="revisor : ${trabalhos[count.index].participacoes}" th:if="${#strings.equalsIgnoreCase(revisor.papel, 'REVISOR')}" th:id="|revisando_${revisor.pessoa.id}|" onclick="remove(this)" class="collection-item" th:text="${revisor.pessoa.nome}"> 
+                			    <a th:each="revisor : ${trabalhos[count.index].participacoes}" th:if="${#strings.equalsIgnoreCase(revisor.papel, 'REVISOR')}" th:id="|modalRevisor${count.index}_${revisor.pessoa.id}|" th:onclick="'remover(this,\'modalRevisor'+${count.index}+'\')'" class="collection-item" th:text="${revisor.pessoa.nome}"> 
 	                				<span data-position="bottom" data-delay="50" data-tooltip="Trabalhos Atribuidos a Esteve Revisor" class="title badge tooltipped">1</span>
 	                			</a>
 	                	    </div>
@@ -69,7 +69,7 @@
 	      			</div>
 	      		</div>
 	      		<div class="modal-footer block">
-	            	<a href="#" class="modal-action modal-close waves-effect btn-flat">Fechar  </a>
+	            	<a href="#" onclick="location.reload()" class="modal-action modal-close waves-effect btn-flat">Fechar  </a>
 	            </div>
 	      	</div>
       	</form>
@@ -96,9 +96,6 @@
         //select_initializer
         $('select').material_select();
         
-        //Inicialização do Modal excluir Evento
-        $('.modal-trigger').leanModal();
-        
       //select_initializer
         $('select').material_select();
         
@@ -108,19 +105,23 @@
         	$('.collection-item').attr('trabalho',e.id);
         };
         
-        add = function(e) {//vai receber o Objeto vindo da linkRevisor
+        $('.modal-trigger').leanModal({
+            dismissible: false,
+        });
+        
+        add = function(e,modal) {//vai receber o Objeto vindo da linkRevisor
             var listaescolhidos = $("#listaEscolhidos");
             
             var trabalhoId = $(e).attr('trabalho');
             
-            var seletor = '#revisando_'+$(e).attr('id');
+            var seletor = '#'+modal+'_'+$(e).attr('id');
             
             if ($(seletor).length>0){
             	Materialize.toast('O mesmo organizador não pode ser alocado mais de uma vez no mesmo evento', 4000)
             }else{
               var a = $(e).clone(true);              
-              a.attr('onclick','$(this).remove();');
-              a.attr("id", "revisando_"+$(e).attr('id'));
+              a.attr('onclick',"remover(this,'"+modal+"');");
+              a.attr("id", modal+'_'+$(e).attr('id'));
               
               
               var token = $("meta[name='_csrf']").attr("content");
@@ -151,10 +152,10 @@
             }
           }
         
-        remove = function(e){
-        	var idRevisor = $(e).attr('id').replace('revisando_','');
+        remover = function(e,modal){
+        	modal = modal+'_';
+        	var idRevisor = $(e).attr('id').replace(modal,'');
         	var idTrabalho = $(e).attr('trabalho');
-        	
         	var token = $("meta[name='_csrf']").attr("content");
         	
         	var data = {
