--- a/aplicacao/contest/src/main/resources/templates/error/404.html
+++ b/aplicacao/contest/src/main/resources/templates/error/404.html
@@ -15,8 +15,7 @@
 <body>
   <div th:include="fragments/headerError :: header"></div>
   <div class="container page">
-    <h1 class="center">Página não encontrada</h1>
-    <h5 class="center">Deixe de ser gaiato :p</h5>
+    <h1 class="center">Arquivo ou recurso não encontrado</h1>
     <div class="row ">
       <center>
     	<a th:href="@{/}" class="waves-effect waves-light btn white-text ">Voltar</a>
