Todos os testes implementados Alteração nos textos de ajuda dos criterios de revisao Auto avaliacao do revisor incluido na revisao json

--- a/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
+++ b/aplicacao/contest/src/main/resources/templates/revisor/revisor_avaliar_trabalho.html
@@ -150,8 +150,8 @@
               <div class="col m6 s12">
                 <div class="card horizontal small">
                   <div class="card-stacked">
-                    <div class="card-content"><span class="card-title">* Relevancia</span>
-                      <p>Organização do texto, separação e ordenação das seções para os trabalhos, fluxo de ideias coerente, conclusões sobre o trabalho claras e possíveis dadas as premissas, bom uso de figuras/tabelas/exemplos.</p>
+                    <div class="card-content"><span class="card-title">* Relevância</span>
+                      <p>Relevância do tema abordado no artigo ou resumo.</p>
                     </div>
                     <div class="card-action">
                     	<div class="input-field">
@@ -174,7 +174,7 @@
                 <div class="card horizontal small">
                   <div class="card-stacked">
                     <div class="card-content"><span class="card-title">* Auto-Avaliação do Revisor</span>
-                      <p>Avaliação global do trabalho. A nota final será obtida a partir dos quesitos: originalidade, mérito técnico, clareza, qualidade e relevância. A avaliação geral, assim como a auto-avaliação, servirá como critério para um eventual desempate.</p>
+                      <p>Qualificação do revisor em relação ao tema abordado.</p>
                     </div>
                     <div class="card-action">
 					    <div class="input-field">
@@ -248,7 +248,7 @@
               	<div class="card horizontal small">
                   <div class="card-stacked">
                     <div class="card-content"><span class="card-title">* Avaliação Final do Trabalho</span>
-                      <p>A avaliação final define a aprovação do trabalho</p>
+                      <p>A avaliação final do trabalho define se o mesmo será aprovado, aprovado com ressalvas ou reprovado.</p>
                     </div>
                     <div class="card-action">
                     	<div class="input-field">
