--- a/aplicacao/contest/src/main/resources/templates/login.html
+++ b/aplicacao/contest/src/main/resources/templates/login.html
@@ -54,7 +54,7 @@
             <div class="input-field">
               <i class="material-icons prefix">account_circle</i>
               <input type="text" id="user" th:name="username" />
-              <label for="user">Usuário</label>
+              <label for="user">Usuário (CPF)</label>
             </div>
 
             <div class="input-field">
