--- a/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
+++ b/aplicacao/contest/src/main/resources/templates/autor/autor_meus_trabalhos.html
@@ -43,11 +43,15 @@
                 <p th:text="'Inicio da Submissão: ' + ${#dates.format(evento.prazoSubmissaoInicial,'dd/MM/yyyy')}"></p>
                 <p th:text="'Fim da Submissão: ' + ${#dates.format(evento.prazoSubmissaoFinal,'dd/MM/yyyy')}"></p>
                 <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'NAO_TEM_REVISAO'">
-                  <a th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Novo Trabalho</a>
+                  <a th:if="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}" th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Novo Trabalho</a>
+               	  <a th:unless="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}" class="btn grey white-text">Fora do Prazo de Envio de Trabalho</a>
+               	  
                	  <a th:href="@{'/autor/listarTrabalhos/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
                 </div>
                 <div class="card-action" th:if="${trabalhosEvento[__${iter.index}__]} == 'TEM_REVISAO'">
-                  <a th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Novo Trabalho</a>
+                  <a th:if="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}" th:href="@{'/autor/enviarTrabalhoForm/' + ${evento.id}}" class="waves-effect waves-light btn green">Enviar Novo Trabalho</a>
+               	  <a th:unless="${evento.isPeriodoInicial()} or ${evento.isPeriodoFinal()}" class="btn grey white-text">Fora do Prazo de Envio de Trabalho</a>
+               	  
                	  <a th:href="@{'/autor/listarTrabalhos/'+ ${evento.id}}" class="waves-effect waves-light btn yellow">Listar Trabalhos</a>
                   <a href="#" class="waves-effect waves-light btn blue">Ver Revisao</a>
                 </div>
